# cmake-extra

./: .appveyor.yml  .travis.yml  AddSubmodule.cmake  CMakeBuildPackage.cmake  CMakeDetectArch.cmake  CMakeDetermineArchitecture.cmake  CMakeLists.txt  CheetahGenerate.cmake  FindCXX11.cmake  FindOpenGL.cmake  FixCCache.cmake  FixStaticLink.cmake  GtuluCompiler.cmake  ParseVersion.cmake  README.md  README.rst  RunCheetah.cmake  appveyor.yml  coveralls-upload.in
Modules/: PackageHelper.cmake
Tests/: install.cmake
Tests/executable/: CMakeLists.txt  ExecConfig.cmake
Tests/executable/src/: main.cpp
boost.pkg/: CMakeLists.txt  boost_container.patch  boost_test.patch  boost_thread.patch
bzip2.pkg/: CMakeLists.txt  patch
example/: CMakeBuildPackage.cmake  CMakeLists.txt
example/src/: main.cpp
openal.pkg/: CMakeLists.txt
png.pkg/: CMakeLists.txt
test/: CMakeLists.txt  test-config.cmake
toolchain/: i686-windows-mingw-clang.cmake  i686-windows-mingw.cmake  x86_64-windows-mingw.cmake
xml2.pkg/: CMakeLists.txt  patch
xz.pkg/: CMakeLists.txt
z.pkg/: CMakeLists.txt
zlib.pkg/: 0001-Move-sources-to-src-and-public-headers-to-include.patch  0002-Use-CMakeBuildPackage-for-building-add-z-config.cmak.patch  0002-Use-CMakeBuildPackage-for-building.patch  0003-Add-C-module-ts-file-wrapping-zlib.h-in-zlib-namespa.patch  CMakeLists.txt
